--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ Thumbs.db
 .firebase
 *-debug.log
 .runtimeconfig.json
+
+# Ignore environment files
+src/environments/environment.ts
+src/environments/environment.prod.ts
